Adds optional parameter to results endpoint which allows to fetch specific estimator by name
